WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298987
REGRESSION (
299927@main
): [ macOS ]TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=298987
Summary
REGRESSION (299927@main): [ macOS ]TestWebKitAPI.UnifiedPDF.PasswordFormShoul...
Karl Rackler
Reported
2025-09-16 15:56:43 PDT
Description: TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation This issue can be bisected to
299927@main
using the command: /Volumes/Data/Dev/OpenSource/Tools/Scripts/run-api-tests --debug --iterations 1 --force TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation
Diff: 02:33:52.699 53925 CoreGraphics PDF has logged an error. Set environment variable "CG_PDF_VERBOSE" to learn more. 02:33:52.781 53925 2025-09-13 02:33:52.781 TestWebKitAPI[63659:1419914] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=ReferenceError: Can't find variable: internals, WKJavaScriptExceptionColumnNumber=10, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/Apple-Sequoia-Debug-AppleSilicon-WK2-Tests/build/WebKitBuild/Debug/TestWebKitAPIResources.bundle/Contents/Resources/encrypted.pdf, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: internals.unlockPDFDocumentForTesting(document.querySelector('embed'), 'test') 02:33:52.833 53925 02:33:52.834 53925 /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:617 02:33:52.834 53925 Value of: !error 02:33:52.834 53925 Actual: false 02:33:52.834 53925 Expected: true 02:33:52.834 53925 02:33:52.834 53925 02:33:52.834 53925 02:33:52.834 53925 /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm:679 02:33:52.834 53925 Expected equality of these values: 02:33:52.834 53925 colorsBefore 02:33:52.834 53925 Which is: { 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, ... } 02:33:52.834 53925 colorsAfter 02:33:52.834 53925 Which is: { 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, 8-byte object <FF-80 80-80 00-00 04-13>, ... } 02:33:52.834 53925 02:33:52.834 53925 02:33:52.849 53925 worker/0 TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation Failed 02:33:52.976 53925 2025-09-13 02:33:52.976 TestWebKitAPI[63663:1419963] NSEventConcurrentProcessingEnabled=NO 02:33:53.327 53925 CoreGraphics PDF has logged an error. Set environment variable "CG_PDF_VERBOSE" to learn more. 02:34:26.113 53925 Couldn't quit 63663 with SIGTERM, sending SIGKILL.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-16 15:56:52 PDT
<
rdar://problem/160728656
>
Chris Dumez
Comment 2
2025-09-25 02:03:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51307
EWS
Comment 3
2025-09-25 16:06:20 PDT
Committed
300537@main
(ce989ed6eac8): <
https://commits.webkit.org/300537@main
> Reviewed commits have been landed. Closing PR #51307 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug