REGRESSION (299927@main): [ macOS ]TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation is a consistent failure https://bugs.webkit.org/show_bug.cgi?id=298987 rdar://160728656

Reviewed by Per Arne Vollan and Basuke Suzuki.

The code in Navigation::innerDispatchNavigateEvent() was getting called from
FrameLoader::commitProvisionalLoad() and would end up constructing the JS
global object too early and the test's injected bundle would fail to setup
`window.internals`. The reason innerDispatchNavigateEvent() would end up
constructing the JS global object was due to constructing a dummy resolved
JS promise, for the sole purpose of scheduling work in a microtask.
Instead of constructing a JS promise for this, I now simply schedule a
microtask to run the code in question.

As a result, the JS global object now gets constructed at the same time
it used to (when the test calls evaluateJavaScript) and the test passes
again.

This should not change the behavior on JS side.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm
* Source/WebCore/page/Navigation.cpp:
(WebCore::waitForAllPromises):
(WebCore::Navigation::innerDispatchNavigateEvent):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm:
(TestWebKitAPI::UNIFIED_PDF_TEST):

Canonical link: https://commits.webkit.org/300537@main